--- a/index.html
+++ b/index.html
@@ -568,31 +568,169 @@
 
         /* 文章展示区域 */
         .recent-posts {
-            padding: 5rem 0;
-            background: var(--bg-color);
-        }
-
-        .posts-grid {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 2rem;
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 0 2rem;
+            padding: 4rem 0;
         }
 
         .section-title {
             text-align: center;
+            font-size: 2rem;
             margin-bottom: 3rem;
-            font-size: 2.5rem;
             color: var(--text-primary);
+        }
+
+        .posts-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
+        }
+
+        .post-card {
+            background: var(--card-bg);
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .post-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .post-image-container {
+            height: 200px;
+            overflow: hidden;
+        }
+
+        .post-image {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+        }
+
+        .post-card:hover .post-image {
+            transform: scale(1.05);
+        }
+
+        .post-content {
+            padding: 1.5rem;
+        }
+
+        .post-meta {
+            display: flex;
+            gap: 1rem;
+            font-size: 0.9rem;
+            color: var(--text-secondary);
+            margin-bottom: 1rem;
+        }
+
+        .post-meta span {
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
         }
 
         /* 居中查看更多按钮 */
         .center-button {
             text-align: center;
             margin-top: 3rem;
-            padding-bottom: 2rem;
+        }
+
+        /* 响应式设计 */
+        @media (max-width: 1024px) {
+            .posts-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 640px) {
+            .posts-grid {
+                grid-template-columns: 1fr;
+            }
+        }
+
+        /* 技能展示区域样式 */
+        .skills {
+            padding: 4rem 0;
+            background: var(--bg-color);
+        }
+
+        .skills-grid {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 2rem;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
+        }
+
+        .skill-card {
+            background: var(--card-bg);
+            border-radius: 12px;
+            padding: 2rem;
+            text-align: center;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            opacity: 0;
+            transform: translateY(20px);
+        }
+
+        .skill-card.animate {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .skill-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+        }
+
+        .skill-card i {
+            font-size: 2.5rem;
+            color: var(--primary-color);
+            margin-bottom: 1rem;
+        }
+
+        .skill-card h3 {
+            margin-bottom: 1rem;
+            color: var(--text-primary);
+        }
+
+        .skill-card p {
+            color: var(--text-secondary);
+            font-size: 0.95rem;
+            line-height: 1.6;
+        }
+
+        .skill-level {
+            margin-top: 1rem;
+            background: rgba(37, 99, 235, 0.1);
+            height: 6px;
+            border-radius: 3px;
+            overflow: hidden;
+        }
+
+        .skill-progress {
+            height: 100%;
+            background: var(--primary-color);
+            width: 0;
+            transition: width 1s ease-out;
+        }
+
+        /* 响应式设计 */
+        @media (max-width: 1024px) {
+            .skills-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+        }
+
+        @media (max-width: 640px) {
+            .skills-grid {
+                grid-template-columns: 1fr;
+            }
         }
     </style>
 </head>
@@ -862,11 +1000,6 @@
 
         // 滚动动画
         document.addEventListener('DOMContentLoaded', function() {
-            const observerOptions = {
-                threshold: 0.1,
-                rootMargin: '0px 0px -50px 0px'
-            };
-
             const observer = new IntersectionObserver((entries) => {
                 entries.forEach(entry => {
                     if (entry.isIntersecting) {
@@ -876,22 +1009,21 @@
                         if (entry.target.classList.contains('skill-card')) {
                             const progress = entry.target.querySelector('.skill-progress');
                             if (progress) {
-                                progress.style.width = progress.getAttribute('data-progress') + '%';
+                                const width = progress.getAttribute('data-progress');
+                                progress.style.width = width + '%';
                             }
                         }
                         
                         observer.unobserve(entry.target);
                     }
                 });
-            }, observerOptions);
-
-            // 观察文章卡片
-            document.querySelectorAll('.post-card').forEach(card => {
-                observer.observe(card);
+            }, {
+                threshold: 0.1
             });
 
-            // 观察技能卡片
-            document.querySelectorAll('.skill-card').forEach(card => {
+            // 观察所有技能卡片
+            document.querySelectorAll('.skill-card').forEach((card, index) => {
+                card.style.transitionDelay = `${index * 0.1}s`;
                 observer.observe(card);
             });
         });
