--- a/index.html
+++ b/index.html
@@ -1164,5 +1164,8 @@
             typeText();
         });
     </script>
+    <script src="/assets/js/theme-manager.js"></script>
+    <script src="/assets/js/post-manager.js"></script>
+    <script src="/assets/js/posts.js"></script>
 </body>
 </html>
