--- a/index.html
+++ b/index.html
@@ -1003,29 +1003,6 @@
             document.querySelector('.nav-links').classList.toggle('active');
         });
 
-        // 文章管理类
-        class PostManager {
-            constructor() {
-                this.posts = [];
-            }
-
-            async init() {
-                try {
-                    const response = await fetch('/posts/content/metadata.json');
-                    if (!response.ok) throw new Error('Failed to fetch posts metadata');
-                    this.posts = await response.json();
-                    // 按日期排序
-                    this.posts.sort((a, b) => new Date(b.date) - new Date(a.date));
-                } catch (error) {
-                    console.error('Error initializing PostManager:', error);
-                    this.posts = [];
-                }
-            }
-
-            getRecentPosts(count = 3) {
-                return this.posts.slice(0, count);
-            }
-        }
 
         // 文章加载和渲染
         document.addEventListener('DOMContentLoaded', async function() {
@@ -1164,7 +1141,9 @@
             typeText();
         });
     </script>
+    <!-- 修改脚本引入顺序 -->
+    <script src="/assets/js/post-manager.js"></script>
     <script src="/assets/js/theme-manager.js"></script>
-    <script src="/assets/js/posts.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
