--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Diarina - 个人博客</title>
     <meta name="description" content="Diarina的个人博客，分享技术文章和项目经验">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
+    <link rel="icon" type="image/gif" href="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7">
     <style>
         /* 基础变量 */
         :root {
